--- a/admin/sem/section3.html
+++ b/admin/sem/section3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-init-css@latest/init.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/style-blank@latest/blank.css">
 
 <header>
     <span id="title">
