--- a/index.html
+++ b/index.html
@@ -13,96 +13,30 @@
 <small>broadway Inc.</small>
 
 <article>
-  <h1>Complexity of Modern Web Development</h1>
+  <h1>Redefining Web Development for the Digital Age</h1>
+  <h4>Navigating Modern Challenges:</h4>
   <p>
-    Building a website used to be straightforward.
-    <br>
-    <br>
-    You build a server, deploy it, and let it serve HTML content to users.
-    Everything—code, data, and files—was kept in one place, making management and operations simple.
-    <br>
-    <br>
-    However, the landscape has drastically changed.
-    <br>
-    <br>
-    The introduction of cloud computing, the rise of no-code/low-code platforms, and a variety of frameworks were all
-    promised to simplify development.
-    <br>
-    <br>
-    Ironically, this evolution introduced more complexity. Developers are now faced with navigating through multiple
-    frameworks, dealing with complex server configurations, and often requiring expert intervention during deployment.
-    <br>
-    <br>
-    We've envision a different approach—one that simplifies backend web development solutions
-    without compromising capabilities.
+    As the demand for data surges, energy consumption at data centers has increased, posing environmental and operational challenges. Many enterprises are still reliant on database paradigms from the 1970s. While these systems are reliable, they fail to meet the evolving needs of modern data management and AI integration, which require more adaptable and efficient solutions. Moreover, some countries face land scarcity, making it challenging to build data centers that can keep up with today’s internet demands.
   </p>
 
-  <h4>
-    The Serverless Integration
-  </h4>
-
+  <h4>A Revolutionary Data Paradigm:</h4>
   <p>
-    We distilled backend servers only to their core function: securely and efficiently serving user requests.
-    <br>
-    <br>
-    By harnessing serverless technologies, we achieve this while eliminating the need for conventional server
-    management and leaving the computation to the client.
+    We propose a new paradigm in which users own their data and determine how it should be stored and accessed. This user-centric approach eliminates the need for traditional backend database schemas and reduces the need for additional servers. By shifting security logic and indexing directly to the client, we minimize backend infrastructure, thereby cutting energy use and costs. This shift not only optimizes resources but also enhances flexibility and privacy.
   </p>
 
-  <h4>
-    No More Server Configuration
-  </h4>
+
+  <h2>Introducing Skapi: Database as a Service:</h2>
 
   <p>
-    Many cloud services have already solved numerous problems in modern web development.
-    The real challenge was integrating these services into a usable server.
-    <br>
-    <br>
-    We've streamlined this process by interconnecting these services using serverless functions,
-    freeing developers from the complexities of cloud service configurations.
+    Skapi seamlessly connects your applications to our robust serverless API, enabling the development of full-stack web applications without traditional backend servers. This simplification allows developers to focus entirely on the application itself, free from the complexities of backend management.
   </p>
-
-  <h4>
-    No More Database Schemas
-  </h4>
-
+  <h4>Packed with Features, Designed for Flexibility:</h4>
   <p>
-    We believe the user is the owner of their data, and should be the
-    one to decide how their data should be stored and accessed.
-    <br>
-    <br>
-    By introducing this user-centric database model, it removes the prerequisite of designing database
-    schemas from the backend, also assuring security and flexibility with high performance.
+    Skapi comes equipped with essential features like user security, content delivery networks (CDN), automated emails, file storage, and real-time data updates—all integrated effortlessly into your frontend. Compatible with vanilla HTML and various frontend frameworks, Skapi ensures that HTML and JavaScript are all you need to develop sophisticated web services.
   </p>
-
-  <br>
-
-  <h2>Introducing Skapi: Your Silver Bullet for Full Stack Web Development</h2>
-
+  <h4>Experience the Power of Skapi:</h4>
   <p>
-    Aligned with our vision, we proudly introduce you to Skapi, a frontend JavaScript library that connects you to our
-    robust serverless API solutions.
-    Enabling you to build full-stack web applications directly within your HTML environment without the need for a
-    backend server.
-    <br>
-    <br>
-    Say goodbye to the complexities of configuration, database design, and server deployment.
-    Skapi streamlines your development, letting you focus solely on building.
-    <br>
-    <br>
-    Skapi comes packed with a comprehensive array of features, including user security, CDN, databases, automated
-    emails,
-    file storage, real-time data, and much more – all integrated seamlessly and accessible directly from your
-    frontend.
-    <br>
-    <br>
-    Compatible with vanilla HTML and various frontend frameworks, Skapi guarantees that your HTML and JavaScript are
-    the
-    only tools required to develop a sophisticated and robust web service.
-  </p>
-
-  <p>
-    Discover Skapi at <a href="https://www.skapi.com" target="_blank">www.skapi.com</a>.
+    Discover how Skapi can transform your web development projects. Visit us at <a href="https://www.skapi.com" target="_blank">www.skapi.com</a> to learn more.
   </p>  
 </article>
 
@@ -131,15 +65,6 @@
 <footer>
   <small>broadway Inc. 101-3302, 109 Mapo-daero, Mapo-gu, Seoul, 04146, Republic of Korea</small>
 </footer>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 <style>
   body {
