--- a/admin/users.html
+++ b/admin/users.html
@@ -5,11 +5,10 @@
 <link rel="stylesheet" href="../style.css">
 <script src="https://cdn.jsdelivr.net/npm/skapi-js@latest/dist/skapi.js"></script>
 <script src="../util.js"></script>
-<script>
-    const skapi = new Skapi("ap220VneiKiyIzgLeFEc", "f8e16604-69e4-451c-9d90-4410f801c006");
-</script>
+<script src="/skapi.js"></script>
 
 <h1 style='margin:0;line-height: 0;text-align: center;' id="loading"></h1>
+
 <main id="info" hidden>
     <div style="display: flex; align-items: center; justify-content: space-between;">
         <h2 >User List</h2>
