--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/style-blank@latest/blank.css">
 <link rel="stylesheet" href="style.css">
 <script src="util.js"></script>
-<script>
-  const skapi = new Skapi("ap220VneiKiyIzgLeFEc", "f8e16604-69e4-451c-9d90-4410f801c006");
-</script>
+<script src="/skapi.js"></script>
+
 <br>
+
 <small>broadway Inc.</small>
 
 <article>
