--- a/admin/deploy.html
+++ b/admin/deploy.html
@@ -5,9 +5,8 @@
 <link rel="stylesheet" href="../style.css">
 <script src="https://cdn.jsdelivr.net/npm/skapi-js@latest/dist/skapi.js"></script>
 <script src="../util.js"></script>
-<script>
-    const skapi = new Skapi("ap220VneiKiyIzgLeFEc", "f8e16604-69e4-451c-9d90-4410f801c006");
-</script>
+<script src="/skapi.js"></script>
+
 <main>
     <div style="display: flex; align-items: center; justify-content: space-between;">
         <h2>www.skapi.com</h2>
