--- a/admin/login.html
+++ b/admin/login.html
@@ -6,9 +6,8 @@
 <script src="https://cdn.jsdelivr.net/npm/skapi-js@latest/dist/skapi.js"></script>
 
 <script src="../util.js"></script>
-<script>
-    const skapi = new Skapi("ap220VneiKiyIzgLeFEc", "f8e16604-69e4-451c-9d90-4410f801c006");
-</script>
+<script src="/skapi.js"></script>
+
 <main>
     <h2>Login</h2>
     <hr>
