--- a/admin/info.html
+++ b/admin/info.html
@@ -209,7 +209,7 @@
     })
 
     skapi.secureRequest({
-        url: "http://seoul.broadwayinc.computer:3000/info",
+        url: "https://api.broadwayinc.computer/info",
     }).then(r => {
         let keys = [
             "users",
