--- a/admin/users.html
+++ b/admin/users.html
@@ -56,7 +56,7 @@
         document.querySelector('#info button').disabled = true;
 
         return skapi.secureRequest({
-            url: "http://seoul.broadwayinc.computer:3000/list-users",
+            url: "https://api.broadwayinc.computer/list-users",
             data: {
                 more
             }
