--- a/admin/deploy.html
+++ b/admin/deploy.html
@@ -16,9 +16,9 @@
     <p>This action will deploy the recent version of the website.</p>
     <p>Make sure that:</p>
     <ul>
-        <li>You have checked essential functionalities within the website.</li>
         <li>npm i skapi-js@latest</li>
-        <li>cd src/skapi-extensions; git pull</li>
+        <li>You have checked essential functionalities within the website.</li>
+        <li>You have pushed the latest version of the website</li>
     </ul>
     <p>Once all above is checked you may proceed and deploy.</p>
     <div>
