--- a/admin/index.html
+++ b/admin/index.html
@@ -30,6 +30,9 @@
         <li>
             <a href="/pp/skapi.html">Skapi Privacy Policy</a>
         </li>
+        <li>
+            <a href="/admin/unlimited.html">Grant Unlimited</a>
+        </li>
         <!-- <li>
             <a href="/admin/html-sem.html">HTML Guides</a>
         </li> -->
