--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       Web Development, Music Production
       <br>
       <a href="https://www.skapi.com">www.skapi.com</a>
-      <br>
-      Yohan House 2nd Floor, 24, <span>Seongmisan-Ro,</span> Mapo-gu, Seoul, <span>Republic of Korea.</span> <span>ZIP: 03997</span>
+      <!-- <br> -->
+      <!-- BROADWAYINC PTE. LTD., 6 EU TONG SEN STREET #08-12 THE CENTRAL Singapore 059817 -->
+      <!-- Yohan House 2nd Floor, 24, <span>Seongmisan-Ro,</span> Mapo-gu, Seoul, <span>Republic of Korea.</span> <span>ZIP: 03997</span> -->
     </small>
   </div>
 </main>
