--- a/pp/skapi.html
+++ b/pp/skapi.html
@@ -179,4 +179,53 @@ You agree that the original English text shall prevail in the case of a dispute.
 <p>If you have any questions about these Terms and Conditions, You can contact us:</p>
 <ul>
 <li>By email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="52213933223b1230203d333625332b3b3c317c313d3f">[email&#160;protected]</a></li>
-</ul><script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+</ul>
+<script>
+    ! function() {
+    "use strict";
+
+    function e(e) {
+        (console.error ? console.error : console.log).call(console, e)
+    }
+
+    function t(e) {
+        return l.innerHTML = '<a href="' + e.replace(/"/g, "&quot;") + '"></a>', l.childNodes[0].getAttribute("href")
+    }
+
+    function r(e, t) {
+        var r = e.substr(t, 2);
+        return parseInt(r, 16)
+    }
+
+    function n(e, n) {
+        for (var o = "", c = r(e, n), a = n + 2; a < e.length; a += 2) {
+            var l = r(e, a) ^ c;
+            o += String.fromCharCode(l)
+        }
+        return t(o)
+    }
+    var o = "/cdn-cgi/l/email-protection#",
+        c = ".__cf_email__",
+        a = "data-cfemail",
+        l = document.createElement("div");
+    ! function() {
+        for (var t = document.getElementsByTagName("a"), r = 0; r < t.length; r++) try {
+            var c = t[r],
+                a = c.href.indexOf(o);
+            a > -1 && (c.href = "mailto:" + n(c.href, a + o.length))
+        } catch (t) {
+            e(t)
+        }
+    }(),
+    function() {
+        for (var t = document.querySelectorAll(c), r = 0; r < t.length; r++) try {
+            var o = t[r],
+                l = n(o.getAttribute(a), 0),
+                i = document.createTextNode(l);
+            o.parentNode.replaceChild(i, o)
+        } catch (t) {
+            e(t)
+        }
+    }()
+}();
+</script>
