--- a/admin/index.html
+++ b/admin/index.html
@@ -36,6 +36,9 @@
         <!-- <li>
             <a href="/admin/html-sem.html">HTML Guides</a>
         </li> -->
+        <li>
+            <a href="/admin/deploy-tek.html">Deploy Teklium Website</a>
+        </li>
         <br>
         <li>
             <a href="/admin/change-password.html">Change Password</a>
