--- a/admin/deploy-tek.html
+++ b/admin/deploy-tek.html
@@ -9,7 +9,7 @@
 
 <main>
     <div style="display: flex; align-items: center; justify-content: space-between;">
-        <h2>www.skapi.com</h2>
+        <h2>www.teklium.com</h2>
         <a href="/admin/index.html">Back</a>
     </div>
     <hr>
