--- a/admin/deploy-tek.html
+++ b/admin/deploy-tek.html
@@ -20,6 +20,7 @@
         <li>You have checked essential functionalities within the website.</li>
         <li>You have pushed the latest version of the website</li>
     </ul>
+    <p>The CDN origin URL is: <a href='https://d35b2lpetkx0dh.cloudfront.net/'>https://d35b2lpetkx0dh.cloudfront.net/</a></p>
     <p>Once all above is checked you may proceed and deploy.</p>
     <div>
         <button style='float: right;' id="deployButton" onclick="deploy()">Deploy</button>
