--- a/admin/index.html
+++ b/admin/index.html
@@ -25,6 +25,9 @@
             <a href="/admin/deploy.html">Deploy Website</a>
         </li>
         <li>
+            <a href="/admin/serviceinfo.html">Service Info</a>
+        </li>
+        <li>
             <a href="/admin/tickets.html">Tickets</a>
         </li>
         <li>
