--- a/admin/index.html
+++ b/admin/index.html
@@ -39,9 +39,9 @@
         <!-- <li>
             <a href="/admin/html-sem.html">HTML Guides</a>
         </li> -->
-        <!-- <li>
-            <a href="/admin/deploy-tek.html">Deploy Teklium Website</a>
-        </li> -->
+        <li>
+            <a href="/admin/deploy-skapi-js-beta.html">Deploy skapi-js Beta</a>
+        </li>
         <br>
         <li>
             <a href="/admin/change-password.html">Change Password</a>
