--- a/admin/deploy-skapi-js-beta.html
+++ b/admin/deploy-skapi-js-beta.html
@@ -17,7 +17,7 @@
     <p>Make sure that:</p>
     <ul>
         <li>You have merged the latest version of skapi-js</li>
-        <li>You have updated the version of package.js</li>
+        <li>You have updated the version of package.js. (Naming convention: 1.0.xxx-beta.0, 1.0.xxx-beta.1...)</li>
         <li>You have checked the __version properties.</li>
     </ul>
     <p>Once all above is checked you may proceed and deploy.</p>
