--- a/admin/deploy-skapi-js-beta.html
+++ b/admin/deploy-skapi-js-beta.html
@@ -9,18 +9,19 @@
 
 <main>
     <div style="display: flex; align-items: center; justify-content: space-between;">
-        <h2>Skapi JS Beta</h2>
+        <h2>Skapi JS Vivian</h2>
         <a href="/admin/index.html">Back</a>
     </div>
     <hr>
-    <p>This action will deploy the recent version of the skapi-js beta.</p>
+    <p>This action will deploy Vivi's version of the skapi-js.</p>
     <p>Make sure that:</p>
     <ul>
         <li>You have merged the latest version of skapi-js</li>
-        <li>You have updated the version of package.js. (Naming convention: 1.0.xxx-beta.0, 1.0.xxx-beta.1...)</li>
+        <li>You have updated the version of package.js. (Naming convention: 1.0.xxx-vivi.0, 1.0.xxx-vivi.1...)</li>
         <li>You have checked the __version properties.</li>
     </ul>
     <p>Once all above is checked you may proceed and deploy.</p>
+    <p>Once after deployed (est, ~ 5min), You can ask the frontend dev to "npm i skapi-js@vivi"</p>
     <div>
         <button style='float: right;' id="deployButton" onclick="deploy()">Deploy</button>
     </div>
