--- a/admin/index.html
+++ b/admin/index.html
@@ -40,7 +40,7 @@
             <a href="/admin/html-sem.html">HTML Guides</a>
         </li> -->
         <li>
-            <a href="/admin/deploy-skapi-js-beta.html">Deploy skapi-js Beta</a>
+            <a href="/admin/deploy-skapi-js-beta.html">Deploy Vivi's skapi-js</a>
         </li>
         <br>
         <li>
