--- a/admin/index.html
+++ b/admin/index.html
@@ -42,6 +42,9 @@
         <li>
             <a href="/admin/deploy-skapi-js-beta.html">Deploy Vivi's skapi-js</a>
         </li>
+        <li>
+            <a href="/admin/deploy-skapi-bleeding-edge.html">Deploy Test Backend</a>
+        </li>
         <br>
         <li>
             <a href="/admin/change-password.html">Change Password</a>
