--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
     <h1>Welcome to <span style="color:yellow">broadway Inc.</span></h1>
 
     <p>
-        At broadway Inc., we believe in the power of talent, dedication, and innovation.
+        We believe in the power of talent, dedication, and innovation.
     </p>
-    <p>
-        Our mission is to empower
-        individuals—regardless of their background—to achieve success and make a meaningful impact on the world.
-    </p>
+    
     <p>
         Through cutting-edge technology, we help businesses thrive by simplifying backend development, enabling them to
         focus on what truly matters: growth, creativity, and delivering exceptional value.
+    </p>
+
+    <h3>Solutions for Big Data & AI Development</h3>
+    <p>
+        We understand that in today's information-driven world, efficient data processing is key.
+    </p>
+    <p>
+        With our unique indexing technology and user-centric design, we deliver powerful database and security solutions specifically tailored to meet the needs of big data and AI-driven businesses—ensuring speed, scalability, and robust data protection.
     </p>
 
     <h3>Skapi: <span>Next-Gen Backend API Service</span></h3>
@@ -37,14 +42,6 @@
         👉 Experience Skapi at <a href="https://www.skapi.com">skapi.com</a>
     </p>
 
-    <h3>Solutions for Big Data & AI Development</h3>
-    <p>
-        In today's information-driven world, efficient data processing is essential.
-    </p>
-    <p>
-        With our unique indexing technology and user-centric design, we deliver powerful database and security solutions specifically tailored to meet the needs of big data and AI-driven businesses—ensuring speed, scalability, and robust data protection.
-    </p>
-    
     <br>
 
     <hr>
