Enhance content clarity and engagement in index.html

--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
     <h2>Hi, we are <span class='bold'>broadway Inc.</span></h2>
 
     <p>
-        We build a complete backend infrastructure that transforms your HTML page into a full-stack web application.
+        We provide a complete backend infrastructure that turns your static HTML page into a full-stack web application.
     </p>
 
     <p>
-        We are obsessed with making web development as simple and efficient as possible while preserving creativity and fun.
+        Our mission is to make web development as simple and efficient as possible—without sacrificing creativity and fun.
     </p>
 
     <p>
-        We believe the best web development technology is <span class='bold'>plain HTML and JavaScript</span>—not bloated frameworks.
+        Modern web frameworks can be bloated and complex. We believe plain HTML and JavaScript are more than capable of building great, modern web applications.
+        <br>
         <br>
         So, we set out to create a complete backend solution that works seamlessly with pure HTML.
     </p>
