Enhance emphasis on belief in plain HTML and JavaScript in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </p>
 
     <p>
-        Modern web frameworks can be bloated and complex. We believe plain HTML and JavaScript are more than capable of building great, modern web applications.
+        Modern web frameworks can be bloated and complex. <span>We believe</span> plain HTML and JavaScript are more than capable of building great, modern web applications.
         <br>
         <br>
         So, we set out to create a complete backend solution that works seamlessly with pure HTML.
